examples/type_system/failing/209_stage_cascade_collapse.flx
// Parser cascade fixture: one root parse error followed by nearby generic parse noise.

fn main() -> Unit {
    let msg = "hello
    }
    }
}
